# cpp-sdl-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md
.github/workflows/: build_and_test.yml  clang_tidy.yml  sanitize.yml
data/licences/: hello_sdl_mit_licence.txt
docs/: CMakeLists.txt
extra/packaging/debian/: launch.sh.in  postinst.in  postrm.in
hello_sdl/: CMakeLists.txt
hello_sdl/src/: main.cpp
libs/: CMakeLists.txt
libs/hello/: CMakeLists.txt
libs/hello/include/ptb/hello/: hello.hpp
libs/hello/src/ptb/hello/: hello.cpp
libs/hello/tests/: CMakeLists.txt  hello_tests.cpp
tools/cmake/: CompilerFlagsTarget.cmake  EnsureNinja.cmake  InstallBuildTools.cmake  StageConfig.cmake
tools/cmake/package/: Linux.cmake
tools/cmake/presets/: checks.json  documentation.json  sanitizer_workflows.json
tools/cmake/toolchains/: asan.toolchain.cmake  clang-cl.toolchain.cmake  clang.toolchain.cmake  gcc.toolchain.cmake  lsan.toolchain.cmake  tsan.toolchain.cmake  ubsan.toolchain.cmake  visual-studio-cl.toolchain.cmake
